--- a/style.css
+++ b/style.css
@@ -12,25 +12,45 @@ body{
 
 /* CONTAINER */
 .container{
-    width: 70%;
+    width: 60%;
     background-color: white;
     margin: 48px auto;
+    padding: 20px;
 }
 
 /* GMAIL LOGO & TEXT */
 .gmail-logo{
-    height: 48px;
+    height: 70px;
     vertical-align: middle;
 }
 
 header{
     display: inline-block;
     line-height: 48px;
-    font-size: 36px;
+    font-size: 14px;
+    font-weight: bold;
     text-transform: uppercase;
 }
 
 hr{
-    color: #9984D4;
-    height: 15px;
+    border: 2px solid #9984D4;
+}
+
+input{
+    margin-top: 10px;
+}
+
+/* FIRST SECTION MESSAGE */
+h2{
+    font-weight: lighter;
+    font-size: 15px;
+}
+
+span{
+    display: inline-block;
+    background-color: #9984D4;
+    border-radius: 50%;
+    color: white;
+    margin: 8px;
+    padding: 10px;
 }
